fix no wrap

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -51,6 +51,10 @@ nav{
 	margin: 20px 0;
 }
 
+#menu-user-container{
+	white-space: nowrap;
+}
+
 #menu-avatar-image{
 	width:         75px;
 	height:        75px;
